fix: mode switcher styles on mobile

--- a/src/styles/rank/modeswitcher.less
+++ b/src/styles/rank/modeswitcher.less
@@ -72,6 +72,8 @@
     margin-bottom: 2px;
   }
   .rank-mode-item {
-    line-height: 28px;
+    font-size: 14px;
+    line-height: 24px;
+    height: 24px;
   }
 }
